--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div>
                     <input class="btn" type="button" value="0" onclick="display.value += '0'">
                     <input class="btn" type="button" value="." onclick="display.value += '.'">
-                    <input class="equal opt" type="button" value="=" onclick="display.value = eval(display.value)">
+                    <input class="btn opt" id="equal" type="button" value="=" onclick="display.value = eval(display.value)">
 
                 </div>
             </form>
